[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "skimage_ilastik_oc_features"
version = "0.0.1"
authors = [{name="Dominik Kutra", email="dominik.kutra@embl.de" }]
description = "Scikit-image regionprops for ilastik object classification."
readme = "README.md"

# TODO: Add your dependencies here:
dependencies = ["ilastik", "typing_extensions", "scikit-image"]
requires-python = ">=3.9"


[project.entry-points."ilastik.objectfeatures"]
thepackage_features = "skimage_ilastik_oc_features"
